--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,9 +19,12 @@ jobs:
         sudo apt install build-essential
         sudo apt install gcc-arm-none-eabi binutils-arm-none-eabi openocd
         sudo apt install cmake
+    - name: make
+      run: | 
         mkdir build
         cd build
-    - name: make
-      run: cmake .. -DCMAKE_BUILD_TYPE=Debug -G 'CodeBlocks - Unix Makefiles';
+        cmake .. -DCMAKE_BUILD_TYPE=Debug -G 'CodeBlocks - Unix Makefiles';
     - name: build
-      run: cmake --build . --target ISB-UAVBus.elf -j 4
+      run: |
+        cd build 
+        cmake --build . --target ISB-UAVBus.elf -j 4
