--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "tests/Unity"]
 	path = tests/Unity
-	url = git@github.com:ThrowTheSwitch/Unity.git
+	url = https://github.com/ThrowTheSwitch/Unity.git
 [submodule "tests/googletest"]
 	path = tests/googletest
-	url = git@github.com:google/googletest.git
+	url = https://github.com/google/googletest.git
